--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ filelock==3.15.4
 Flask==3.0.3
 fonttools==4.53.0
 fsspec==2024.6.1
+gunicorn==22.0.0
 idna==3.7
 intel-openmp==2021.4.0
 itsdangerous==2.2.0
